feature/menu-modal

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,13 @@
     <include src="./partials/customer-reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/menu-modal.html"></include>
+    <!--
+    <script src="js/headerCurrent.js"></script>
+
+    <script src="js/modal.js"></script>
+    
+    <script src="js/mobile-menu.js"></script> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
