--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
-    <script src="js/headerCurrent.js"></script>
+    <!-- <script src="js/headerCurrent.js"></script> -->
     <script src="js/modal.js"></script>    
     <script src="js/mobile-menu.js"></script>
 
