--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
     <script src="./index.js"></script>
     <!--
     <script src="js/header-bg.js"></script>
-    <script src="js/headerCurrent.js"></script> -->
+    <script src="js/headerCurrent.js"></script> 
     <script src="js/modal.js"></script>
     <script src="js/mobile-menu.js"></script>
-    <script src="js/animation-milk.js"></script> 
+    <script src="js/animation-milk.js"></script> -->
   </body>
 </html>
