--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,11 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    <!--
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/headerCurrent.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/mobile-menu.js"></script>
-    <script src="js/animation-milk.js"></script>
+    <script src="js/animation-milk.js"></script> -->
   </body>
 </html>
