--- a/src/index.html
+++ b/src/index.html
@@ -48,16 +48,17 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
    
     <script src="./index.js"></script>
-    
+    <!--
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="js/headerCurrent.js"></script>
+    <script src="js/header-bg.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/mobile-menu.js"></script>
     <script src="js/animation-milk.js"></script>
     <script src="js/slick.min.js"></script>
-    <script src="js/slider-animation.js"></script>
+    <script src="js/slider-animation.js"></script> -->
     
   </body>
 </html>
